--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <img src="images/phones.png" alt="Instagram on phone">
       </section>
       <section class="right-section">
-        <div>
+        <div class="headinsection">
           <img src="images/brand.png" alt="Instagram logo">
-          <a href="#">Log in</a>
+          <a href="#" class="login"> <img src="images/home.png" alt="home"> Log in</a>
         </div>
 
         <article> 
@@ -48,7 +48,7 @@
         <li> <a href="#">Privacy</a></li> 
         <li> <a href="#"> Terms</a></li>
       </ul>
-      <p>2014 Instagram</p> 
+      <p class="copyright">© 2014 Instagram</p> 
     </footer>
      
   </body>
