--- a/index.html
+++ b/index.html
@@ -4,13 +4,54 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
+  <div id="backgroundColorGradient"></div>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <main>
+    <img src="images/phones.png">
+    <div id="rightOfPhone">
+    <section id="logoIn">
+      <img id="brand" src="images/brand.png">
+      <a id="logInButton" href="log in">Log in   <img src="images/home.png"></a>
+    </section>
+    <div id="framePic">
+    <section id="about">
+      <h2>
+        Capture and Share the World's Moments
+      </h2>
+      <p>
+        Instagram is a fast, beautiful and fun way to share your life with
+        friends and family. 
+        <br>
+        <br>
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+        &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <br>
+        <br>
+        Oh yeah, did we mention it's free?
+      </p>
+    </section>
+    <section id="download">
+      <a><img src="images/badge-iphone.png"></a>
+      <a><img src="images/badge-android.png"></a>
+    </section>
+    </div>
+  </div>
+</main>
   </body>
+
+  <footer>
+    <ul>
+      <li><a href="unavailable">About Us</a></li>
+      <li><a href="unavailable">Support</a></li>
+      <li><a href="unavailable">Blog </a></li>
+      <li><a href="unavailable">Press </a></li>
+      <li><a href="unavailable">API</a></li>
+      <li><a href="unavailable">Jobs</a></li>
+      <li><a href="unavailable">Privacy</a></li>
+      <li><a href="unavailable">Terms</a></li>
+      <li><a id="greyBottomTag" href="unavailable">2014 Instagram</a></li>
+    </ul>
+  </footer>
 </html>
