--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
       <footer>
     
     <ul>
-      <li><a href=" ">About Us</a> </li> 
-      <li><a href=" ">Support</a></li> 
-       <li><a href=" ">Blog</a></li>
-       <li><a href=" ">Press</a></li>
+      <li><a href=" ">ABOUT US</a> </li> 
+      <li><a href=" ">SUPPORT</a></li> 
+       <li><a href=" ">BLOG</a></li>
+       <li><a href=" ">PRESS</a></li>
       <li><a href=" ">API</a></li>
-       <li><a href=" ">Jobs</a></li>
-     <li><a href=" ">Privacy</a></li>
-       <li><a href=" ">Terms</a></li>
+       <li><a href=" ">JOBS</a></li>
+     <li><a href=" ">PRIVACY</a></li>
+       <li><a href=" ">TERMS</a></li>
        <li id="cr">&copy; 2014 Instagram</li>
     </ul>
   </footer>
