updated but cant sttle the background image yet

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/style.css">
     <!-- don't forget to link your styles -->
   </head>
-  <body>
+  <body class="fondo">
     <main>
       <section class="left-section">
         <img src="images/phones.png" alt="Instagram on phone">
