need to finish positioning items

--- a/index.html
+++ b/index.html
@@ -1,16 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+  <link rel = "stylesheet" href = "styles/style.css" >
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <title>Instagram</title>
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <main>
+    <div><img class = "pic" src = "images/brand.png"></div>
+    <img class = "home" src = "images/home.png"></div>
+    </main>
+    <section>
+    <div><img class = "phone" src = "images/phones.png"></div>
+  </section>
+  <div class = "caha">
+    <h1>Instagram Capture and Share the World's Moments</h1> 
+    <p>Instagram is a fast, beautiful and fun way to share your life with
+    friends and family.</p>
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+    &mdash; it's that easy.</P> 
+    <p>You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+    <p>Oh yeah, did we mention it's free? </p>
+    <section class = "photos">
+      <img src = images/badge-android.png>
+      <img src = images/badge-iphone.png>
+    </section>
+  </div>
   </body>
+  <footer>
+  <a href = "url">About Us</a> <a href = "url">Support</a> <a href = "url">Blog</a> <a href = "url">Press</a> <a href = "url">API</a>
+  <a href = "url">Jobs<a> <a href = "url">Privacy</a>  <a href = "url">Terms</a> <p>&copy;2014 Instagram</p>
+</footer>
 </html>
