--- a/index.html
+++ b/index.html
@@ -4,13 +4,50 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+<div id="fondoazul">
+
+</div>
+<div class="container">
+  <div id="iphone">
+    <img id="phones" height="350" src="images/phones.png" alt="">
+  </div>
+  <div id="instagram">
+    <div id="logo"> 
+      <img width="180" src="images/brand.png" alt="">
+      <div id="boton"><img  height="15" src="images/home.png" alt=""><span id="texto">Log in</span></div>
+    </div>
+    <div id="info">
+      <article >
+        <h1> Capture and Share the World's Moments </h1>
+        <p>Instagram is a <strong>fast, beautiful </strong>  and  <strong>fun</strong>  way to share your life with
+          friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+      </article>
+    </div>
+    <div id="appstore">
+      <img width="120" src="images/badge-android.png" alt="">
+      <img width="120" src="images/badge-iphone.png" alt="">
+    </div>
+  </div>
+</div>   
+<footer class="piecero">
+  <ul id="links">
+    <li><a href="">About Us</a></li>
+    <li><a href="">Support</a></li>
+    <li><a href="">Blog</a></li>
+    <li><a href="">Press</a></li>
+    <li><a href="">API</a></li>
+    <li><a href="">Jobs</a></li>
+    <li><a href="">Privacy</a></li>
+    <li><a href="">Terms</a></li>
+    <li>2014 &copy; Instagram</li>
+  </ul>
+</footer>
   </body>
+  
 </html>
