--- a/index.html
+++ b/index.html
@@ -4,13 +4,49 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+    <link rel="stylesheet" href="styles/style.css">  </head>
+  
+    <body>
+      <section id="info-body">
+       
+      <img src="images/phones.png" alt="image-phones">
+      
+      <section id="general-info">
+      <section id="name-login">
+        <img class="ig-logo" src="images/brand.png" alt ="logo-brand">
+        <button class="btn-login"><img class="home-logo" src="images/home.png" alt ="home">Log In</button>
+      </section>
+
+      <section id="description">
+        <h2>Capture and Share <br>the World's Moments</h2> 
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+        friends and family. <br>
+        <br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+        &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <br><br>Oh yeah, did we mention it's free?</p>
+
+        <a class="appstore" href="https://apps.apple.com/us/app/instagram/id389801252">
+          <img src="images/badge-iphone.png" alt="appstore"></a>
+
+        <a class="andriodplay" href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=en&gl=US"></a>
+        <img src="images/badge-android.png" alt="playstore"></a>
+      </section>
+      </section>
+    </section>
+
+      <footer>
+        <ul class="list">
+          <li><a href=#>About Us</a></li> 
+          <li><a href=#>Support</a></li> 
+          <li><a href=#>Blog</a></li> 
+          <li><a href=#>Press</a></li> 
+          <li><a href=#>API</a></li>
+          <li><a href=#>Jobs</a></li> 
+          <li><a href=#>Privacy</a></li> 
+          <li><a href=#>Terms</a></li> 
+          <li class="copy">&copy; 2014 Instagram</li>
+        </ul>    
+      </footer>
+
+            </body>
 </html>
