--- a/index.html
+++ b/index.html
@@ -1,16 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="./styles/style.css" />
+</head>
+
+<body>
+  <section id="cover">
+    <div class="phones">
+      <img src="./images/phones.png" />
+    </div>
+    <div id="main">
+      <div id="header">
+        <div>
+          <img src="./images/brand.png" />
+        </div>
+        <div >
+          <button id="log"><img src="./images/home.png"><p>Log in</p></button>
+        </div>
+      </div> 
+      <div id="content">
+        <div class="title">
+          <h2>Capture and Share the World's Moments</h2>
+          <p>Instagram is a <strong>fast</strong>,<strong>beautiful</strong> and <strong>fun</strong> way to share your life with
+            friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to
+            Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+            world.
+            Oh yeah, did we mention it's free?
+          </p>
+        </div>
+        <div class="download">
+          <img src="./images/badge-iphone.png" />
+          <img src="./images/badge-android.png" />
+        </div>
+      </div>
+    </div>
+  </section>
+  <footer class="foot">
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li>2014 Instagram</li>
+    </ul>
+  </footer>
+</body>
+
 </html>
