--- a/index.html
+++ b/index.html
@@ -2,15 +2,54 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="./styles/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <!--  
+    -->
+<section id="seccion">
+
+  <div>
+  <img src="./images/phones.png" alt="">
+  </div>
+
+  <div>
+    <img src="./images/brand.png" alt="">
+    <button ><img  src="./images/home.png" alt="">Log in</button>
+    <div class="info">
+      <h1>Instagram Capture and Share the World's Moments</h1>
+      <p>Instagram is a <strong>fast, beautiful </strong> and <strong>fun</strong> way to share your life with
+        friends and family.</p>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+        &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p>Oh yeah, did we mention it's free?</p>
+    </div>
+    <img class="imgIphone" src="./images/badge-iphone.png" alt=""><img class="imgAndroid" src="./images/badge-android.png" alt="">
+  </div>
+</section>
+ 
+<footer>
+  <ul>
+    <li>ABOUT US</li>
+    <li>SUPPORT</li>
+    <li>BLOG</li>
+    <li>PRESS</li>
+    <li>API</li>
+    <li>JOBS</li>
+    <li>PRIVACY</li>
+    <li>TERMS</li>
+    <li>&copy; 2014 Instagram</li>
+  </ul>
+ 
+
+</footer>
+
+
+
+
+
   </body>
 </html>
