add html structure, few css

--- a/index.html
+++ b/index.html
@@ -4,13 +4,89 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="styles/style.css">
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <header>
+      <div class="blue-background">
+        <img src="images/bgtile.png">
+      </div>
+    </header>
+
+    <main>
+      <div class="phones-presentation"><!--Contenedor de phone, brand logo, article y logos de tienda online-->
+        <div><!--Contenedor phone-->
+          <div>
+            <div class="phones">
+              <img src="images/phones.png">
+            </div>
+          </div>
+        </div>
+        <div><!--Contenedor brand logo, article y logos de tienda online-->
+          <div class="flexbox-instagram"><!--Contenedor brand logo, y log in-->
+            <div class="brand">
+              <img class="brand-instagram" src="images/brand.png" alt="brand-instagram">
+            </div>
+            <nav><!--Nav bar-->
+              <ul>
+                <li><a href="#">Log in</a></li>
+              </ul>
+            </nav>
+          </div>
+          <div><!--Contenedor article-->
+            <section>
+              <div>
+                <div>
+                  <h1>Capture and Share the World's Moments</h1>
+                </div>
+                <article>
+                  <div>
+                    <h2>Instagram is a fast, beautiful and fun way to share your life with friends and family.</h2>
+                  </div>
+                  <div>
+                    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+                  </div>
+                  <div>
+                    <p>Oh yeah, did we mention it's free?</p>
+                  </div>
+                </article>
+              </div>
+            </section>
+          </div>
+          <section><!--Contenedor logod tienda online-->
+            <div>
+              <div>
+                <img src="images/badge-iphone.png" alt="Download on the App Store">
+              </div>
+              <div>
+                <img src="images/badge-android.png" alt="Get it on Google Play">
+              </div>
+            </div>
+         </section>
+        </div>
+      </div>
+      <div><!--Contenedor de nav footer y copyright-->
+        <div>
+          <nav>
+            <ul>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Support</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Press</a></li>
+              <li><a href="#">API</a></li>
+              <li><a href="#">Jobs</a></li>
+              <li><a href="#">Privacy</a></li>
+              <li><a href="#">Terms</a></li>
+            </ul>
+          </nav>
+          <div>
+            <ul>
+              <li>&copy; 2014 Instagram</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
