--- a/index.html
+++ b/index.html
@@ -5,12 +5,64 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="container"> 
+      <div class="blue-box"></div>
+      <div class="white-box">
+        <div class="footer">
+          <a href="">About Us</a>
+          <a href="">Support</a>
+          <a href="">Blog</a>
+          <a href="">Press</a>
+          <a href="">API</a>
+          <a href="">Jobs</a>
+          <a href="">Privacy</a>
+          <a href="">Terms</a>
+          <span>&copy; 2014 INSTAGRAM</span>
+          </div>
+      </div>
+      <div class="content-box">
+        <div class="image-container">
+          <img class="phone-image" src="/images/phones.png" alt="Phones image">
+        </div>
+        <div class="content">
+          <div class="content-header">
+            <img src="/images/brand.png" alt="brand image">
+            <a href="#" class="button-login">
+              <img src="/images/home.png" alt="home icon">
+              Log in
+            </a>
+          </div>
+          <div class="text-content">
+            <div class="content-title">
+              <h4>Capture and Share</h4>
+              <h4>the World's Moments</h4>
+            </div>
+            <div class="content-text">
+              <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+                friends and family.</p>
+              <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+                &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+              <p>Oh yeah, did we mention it's free?</p>
+            </div>
+            <div class="content-download">
+              <a href="">
+                <img src="/images/badge-iphone.png" alt="iOS download">
+              </a>
+              <a href="">
+                <img src="/images/badge-android.png" alt="android download">
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+      
+    
+    <!-- Instagram    
+     Download on the App Store Get it on Google Play     
+         -->
   </body>
 </html>
