done, even if it is not exactly the same

--- a/index.html
+++ b/index.html
@@ -1,16 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+    <link rel="stylesheet" href="../lab-css-instagram-clone/styles/style.css" type="text/css" />
+</head>
+
+<body>
+    <header>
+        <div class="container">
+            <div class="box">
+                <img src="./images/brand.png" href="instagram-logo" class="logo" />
+                <a class="login" href="http://instagram.com"> <img src="./images/home.png" />Log in</a>
+            </div>
+        </div>
+    </header>
+    <section class="container">
+        <div class="box2">
+            <img src="./images/phones.png" class="phones" />
+        </div>
+
+
+
+        <div class="box3">
+            <h1>Capture and Share the World's Moments</h1>
+            <br>
+            <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family. </p> <br>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <br>
+            <p>Oh yeah, did we mention it's free?</p> <br>
+            <img src="./images/badge-iphone.png" /> <img src="./images/badge-android.png" />
+        </div>
+    </section>
+    <div>
+        <footer>
+
+
+            <nav class="nav-bar">
+                <ul>
+
+                    <li class="item"> <a href="#">About us</a> </li>
+                    <li class="item"> <a href="#"> Support </a> </li>
+                    <li class="item"> <a href="#">Blog</a> </li>
+                    <li class="item"> <a href="#">Press</a> </li>
+                    <li class="item"> <a href="#">API</a> </li>
+                    <li class="item"> <a href="#">Jobs</a> </li>
+                    <li class="item"> <a href="#">Privacy</a> </li>
+                    <li class="item"> <a href="#">Terms</a> </li>
+                    <li class="item">
+                        <p>&copy; 2014 Instagram</p>
+                    </li>
+                </ul>
+
+            </nav>
+
+    </div>
+
+    </footer>
+
+
+
+    <!--  Instagram Capture and Share the World's Moments 
+        Instagram is a fast, beautiful and fun way to share your life with
+    friends and family. 
+    Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
     &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
     Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+    Jobs Privacy Terms &copy; 2014 Instagram -->
+</body>
+
 </html>
