--- a/index.html
+++ b/index.html
@@ -4,13 +4,71 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"
+    />
+    <link rel="stylesheet" href="styles/style.css" />
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section class="main">
+      <div class="blue-bg"></div>
+
+      <div class="content-wrapper">
+        <div class="phones-img">
+          <img src="images/phones.png" alt="Phones Image" />
+        </div>
+
+        <div class="cta-wrapper">
+          <div class="logos">
+            <img src="images/brand.png" alt="instagram-logo" />
+
+            <button class="login">
+              <i class="fas fa-home"></i>
+              <p>Log in</p>
+            </button>
+          </div>
+
+          <div class="highlight-text">
+            <div class="text">
+              <h2>Capture and Share the World's Moments</h2>
+              <p>
+                Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way
+                to share your life with friends and family.
+              </p>
+              <p>
+                Take a picture or video, choose a filter to transform its look
+                and feel, then post to Instagram &mdash; it's that easy. You can
+                even share to Facebook, Twitter, Tumblr and more. It's a new way
+                to see the world
+              </p>
+              <p>Oh yeah, did we mention it's free?</p>
+              <div class="app-stores">
+                <img src="images/badge-android.png" alt="google-play-store" />
+                <img src="images/badge-iphone.png" alt="apple-store-logo" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer class="footer">
+      <div class="footer-wrapper">
+        <nav>
+          <ul>
+            <li>About Us</li>
+            <li>Support</li>
+            <li>Blog</li>
+            <li>Press</li>
+            <li>API</li>
+            <li>Jobs</li>
+            <li>Privacy</li>
+            <li>Terms</li>
+          </ul>
+        </nav>
+        <p>&copy; 2014 Instagram</p>
+      </div>
+    </footer>
   </body>
 </html>
