HTML template complete

--- a/index.html
+++ b/index.html
@@ -28,11 +28,18 @@
       </p>
     </section>
 
-    Take a picture or video, choose a filter to transform its look and feel,
-    then post to Instagram &mdash; it's that easy. You can even share to
-    Facebook, Twitter, Tumblr and more. It's a new way to see the world. Oh
-    yeah, did we mention it's free? Download on the App Store Get it on Google
-    Play About Us Support Blog Press API Jobs Privacy Terms &copy; 2014
-    Instagram
+    <footer>
+      <ul>
+        <li>ABOUT US</li>
+        <li>SUPPORT</li>
+        <li>BLOG</li>
+        <li>ORESS</li>
+        <li>API</li>
+        <li>JOBS</li>
+        <li>PRIVACY</li>
+        <li>TERMS</li>
+      </ul>
+      &copy; 2014 Instagram
+    </footer>
   </body>
 </html>
