Create the structure of the page

--- a/index.html
+++ b/index.html
@@ -4,13 +4,46 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link href="./styles/style.css" rel="stylesheet">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+
+    <!--- Section with phones, logo, button and text--->
+    <section class="main-content">
+      <div class="phones">
+        <img src="./images/phones.png" alt="Two phones">
+      </div>
+
+      <div class="logo-and-button">
+        <img src="/images/brand.png" alt="Instagram logo">
+        <button class="log-in-button">Log in</button>
+      </div>
+
+      <div class="text">
+        <h1>Capture and Share the World's Moments Instagram</h1>
+        <p>is a <span>fast, beautiful</span> and <span>fun</span> way to share your life with
+          friends and family.<br><br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>
+          Oh yeah, did we mention it's free?</p>
+          <img class="app-store-button" src="./images/badge-iphone.png" alt="App Store button">
+          <img class="app-store-button" src="./images/badge-android.png" alt="Google Play button">
+      </div>
+    </section>
+       
+    <!--Section with bottom navigation-->
+    <section class="nav">
+      <ul class="nav-bar">
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+      </ul>
+      <p>&copy; 2014 Instagram</p>
+    </section>
+
   </body>
 </html>
