--- a/index.html
+++ b/index.html
@@ -4,13 +4,49 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <main>
+      <section>
+        <img
+          src="/images/phones.png"
+          alt="Two overlaid smartphones show the Instagram app. At one of them, filters are being chosen for a photo of a bridge."
+        />
+      </section>
+      <section>
+        <header>
+          <img src="images/brand.png" alt="Instagram logo" />
+          <button><img src="images/home.png" alt="Home icon" />Log in</button>
+        </header>
+        <h1>Instagram Capture and Share the World's Moments</h1>
+        <p>
+          Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and
+          <strong>fun</strong> way to share your life with friends and family.
+        </p>
+        <p>
+          Take a picture or video, choose a filter to transform its look and
+          feel, then post to Instagram &mdash; it's that easy. You can even
+          share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+          world.
+        </p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <img src="images/badge-iphone.png" alt="Download on the App Store" />
+        <img src="images/badge-android.png" alt="Get it on Google Play" />
+      </section>
+    </main>
+    <footer>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+      </ul>
+      <!-- &copy; 2014 Instagram -->
+    </footer>
   </body>
 </html>
