--- a/index.html
+++ b/index.html
@@ -4,13 +4,52 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="top_header">
+
+    </div>
+    <main>
+      <div>
+        <img src="images/phones.png" alt='Phones'>
+      </div>
+      <div>
+      <section>
+        <img src="images/brand.png" alt="Instagram logo">
+        <button>
+          <img src="images/home.png" alt="Home icon">
+          Log in
+        </button>
+      </section> 
+      <section>
+        <h2>Capture and Share the World's Moments 
+        </h2>      
+        <p>Instagram is a fast, beautiful and fun way to share your life with
+        friends and family.</p> 
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+        &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </p>
+        <p>Oh yeah, did we mention it's free?
+        </p>
+      <div>
+        <img src="images/badge-iphone.png" alt="Badge iPhone">
+        <img src="images/badge-android.png" alt="Badge Android">       
+      </div>  
+    </section>
+    </div>
+      </main>
+    <footer>
+      <a href="#">ABOUT US</a>
+      <a href="#">SUPPORT</a>
+      <a href="#">BLOG</a>
+      <a href="#">PRESS</a>
+      <a href="#">API</a>
+      <a href="#">JOBS</a>
+      <a href="#">PRIVACY</a>
+      <a href="#">TERMS</a>
+      <span>&copy;2014 INSTAGRAM</span>
+    </footer>
+    
   </body>
 </html>
