--- a/index.html
+++ b/index.html
@@ -4,13 +4,50 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <header>
+      <div>
+        <img src="images/brand.png" />
+
+        <a href=""><img src="images/home.png" />Log in</a>
+      </div>
+    </header>
+
+    <div><img src="images/phones.png" /></div>
+    <div>
+      <h2>Capture and Share the World's Moments</h2>
+      It's a new way to see the world.It's a new way to see the world.
+
+      <p>
+        Instagram is a fast, beautiful and fun way to share your life with
+        friends and family.
+      </p>
+      <p>
+        Take a picture or video, choose a filter to transform its look and feel,
+        then post to Instagram &mdash; it's that easy. You can even share to
+        Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      </p>
+      <p>Oh yeah, did we mention it's free?</p>
+      <div>
+        <img src="images/badge-iphone.png" />
+        <img src="images/badge-android.png" />
+      </div>
+    </div>
+
+    <footer>
+      <ul>
+        <li>About us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>Api</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
   </body>
 </html>
