--- a/index.html
+++ b/index.html
@@ -7,13 +7,19 @@
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    <header>
-      <h1>Instagram</h1>
-      <button>Log in</button>
-    </header>
 
-    <section>
-      <h2>Capture and Share the World's Moments</h2>
+    <div class="main-content">
+      <img src="/images/phones.png" alt="">
+
+    <section class="right">
+      
+      <div>
+        <h1>Instagram</h1>
+      <button>Log in</button>
+      </div>
+
+      <div>
+        <h2>Capture and Share the World's Moments</h2>
       <p>
         Instagram is a fast, beautiful and fun way to share your life with
         friends and family.
@@ -26,7 +32,11 @@
       <p>
         Oh yeah, did we mention it's free?
       </p>
+      </div>
+
     </section>
+    </div>
+    
 
     <footer>
       <ul>
