some more styling done

--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
     <div class="main-content">
       <img src="/images/phones.png" alt="">
 
-    <section class="right">
+    <div class="right">
       
-      <div>
-        <h1>Instagram</h1>
-      <button>Log in</button>
+      <div class="top-section">
+        <img src="/images/brand.png" alt="">
+      <a id="log-in"> <img src="/images/home.png" alt="">  Log in</a>
       </div>
 
-      <div>
+      <div class="information">
         <h2>Capture and Share the World's Moments</h2>
       <p>
-        Instagram is a fast, beautiful and fun way to share your life with
+        Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with
         friends and family.
       </p>
       <p>
@@ -32,9 +32,14 @@
       <p>
         Oh yeah, did we mention it's free?
       </p>
+
+      <div class="download-links">
+        <a href="#"><img src="/images/badge-iphone.png" alt="Download on Apple"></a>
+        <a href="#"><img src="/images/badge-android.png" alt="Download on Android"></a>
+      </div>
       </div>
 
-    </section>
+    </div>
     </div>
     
 
@@ -43,13 +48,13 @@
         <li>ABOUT US</li>
         <li>SUPPORT</li>
         <li>BLOG</li>
-        <li>ORESS</li>
+        <li>PRESS</li>
         <li>API</li>
         <li>JOBS</li>
         <li>PRIVACY</li>
         <li>TERMS</li>
       </ul>
-      &copy; 2014 Instagram
+      <p id="copyrite">&copy; 2014 INSTAGRAM</p>
     </footer>
   </body>
 </html>
