more or less done

--- a/index.html
+++ b/index.html
@@ -8,40 +8,49 @@
   </head>
   <body>
 
-    <div class="main-content">
-      <img src="/images/phones.png" alt="">
-
-    <div class="right">
+    <header>
       
-      <div class="top-section">
-        <img src="/images/brand.png" alt="">
-      <a id="log-in"> <img src="/images/home.png" alt="">  Log in</a>
+    </header>
+
+    <div class="main-content">
+      <div class="left">
+        <img
+          src="/images/phones.png"
+          alt="Image of 2 cellphones with Istagram open"
+        />
       </div>
 
-      <div class="information">
-        <h2>Capture and Share the World's Moments</h2>
-      <p>
-        Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with
-        friends and family.
-      </p>
-      <p>
-        Take a picture or video, choose a filter to transform its look and feel,
-        then post to Instagram &mdash; it's that easy. You can even share to
-        Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-      </p>
-      <p>
-        Oh yeah, did we mention it's free?
-      </p>
+      <div class="right">
+        <div class="top-section">
+          <img src="/images/brand.png" alt="" />
+          <a id="log-in"> <img src="/images/home.png" alt="" /> Log in</a>
+        </div>
 
-      <div class="download-links">
-        <a href="#"><img src="/images/badge-iphone.png" alt="Download on Apple"></a>
-        <a href="#"><img src="/images/badge-android.png" alt="Download on Android"></a>
-      </div>
-      </div>
+        <div class="information">
+          <h2>Capture and Share the World's Moments</h2>
+          <p>
+            Instagram is a <span>fast</span>, <span>beautiful</span> and
+            <span>fun</span> way to share your life with friends and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and
+            feel, then post to Instagram &mdash; it's that easy. You can even
+            share to Facebook, Twitter, Tumblr and more. It's a new way to see
+            the world.
+          </p>
+          <p>Oh yeah, did we mention it's free?</p>
 
+          <div class="download-links">
+            <a href="#"
+              ><img src="/images/badge-iphone.png" alt="Download on Apple"
+            /></a>
+            <a href="#"
+              ><img src="/images/badge-android.png" alt="Download on Android"
+            /></a>
+          </div>
+        </div>
+      </div>
     </div>
-    </div>
-    
 
     <footer>
       <ul>
