--- a/index.html
+++ b/index.html
@@ -6,34 +6,37 @@
     <title>Instagram Clone</title>
     <link rel="stylesheet" href="styles/style.css" />
   </head>
+
   <body>
     <header>
-      <div>
-        <img src="images/brand.png" />
-
-        <a href=""><img src="images/home.png" />Log in</a>
-      </div>
+      <div id="instagram">
+        <div id="logo"> 
+          <img width="300" src="images/brand.png" alt="">
+          <div id="boton"><img  height="20" src="images/home.png" alt=""><span id="texto">Log in</span></div>
+        </div>
     </header>
 
-    <div><img src="images/phones.png" /></div>
+    <div class="phones"><img src="images/phones.png" /></div>
+
     <div>
-      <h2>Capture and Share the World's Moments</h2>
+      <h1>Capture and Share the World's Moments</h1>
       It's a new way to see the world.It's a new way to see the world.
 
       <p>
-        Instagram is a fast, beautiful and fun way to share your life with
-        friends and family.
+        Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your
+        life with friends and family.
       </p>
+      <br />
       <p>
         Take a picture or video, choose a filter to transform its look and feel,
         then post to Instagram &mdash; it's that easy. You can even share to
         Facebook, Twitter, Tumblr and more. It's a new way to see the world.
       </p>
       <p>Oh yeah, did we mention it's free?</p>
-      <div>
-        <img src="images/badge-iphone.png" />
-        <img src="images/badge-android.png" />
-      </div>
+      <br />
+
+      <img src="images/badge-iphone.png" />
+      <img src="images/badge-android.png" />
     </div>
 
     <footer>
