--- a/index.html
+++ b/index.html
@@ -5,12 +5,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+
+    <link rel="stylesheet" href="/styles/style.css" />
   </head>
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="main-container">
+      <!-- Iphone-img -->
+      <div class="iphone-img">
+        <img src="/images/phones.png" alt="phones" />
+      </div>
+
+      <!-- Content-container -->
+
+      <div class="content-container">
+        <div class="header">
+          <img src="/images/brand.png" alt="brand" />
+          <button class="logIn-btn">
+            <img src="/images/home.png" alt="home" />Log in
+          </button>
+        </div>
+        <div class="content-text">
+          <h1>Capture and Share the World's Moments</h1>
+
+          <div>
+            <p>
+              Instagram is a <span>fast</span>, <span>beautiful</span> and
+              <span>fun</span> way to share your life with friends and family.
+            </p>
+            <p>
+              Take a picture or video, choose a filter to transform its look and
+              feel, then post to Instagram &mdash; it's that easy. You can even
+              share to Facebook, Twitter, Tumblr and more. It's a new way to see
+              the world.
+            </p>
+            <p>Oh yeah, did we mention it's free?</p>
+          </div>
+        </div>
+
+        <!-- Badges img -->
+
+        <div class="badges">
+          <img src="/images/badge-iphone.png" alt="badge-iphone" />
+          <img src="/images/badge-android.png" alt="badge-android" />
+        </div>
+      </div>
+    </div>
+
+    <!-- Footer -->
+
+    <footer>
+      <ul class="footer-ul">
+        <li><a href="#">About us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li id="copyright">&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
   </body>
 </html>
