--- a/index.html
+++ b/index.html
@@ -7,6 +7,74 @@
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
+    <container>
+      <div>
+        <div>
+          <img
+            id="smartphones"
+            src="/images/phones.png"
+            alt="Two overlaid smartphones show the Instagram app. At one of them, filters are being chosen for a photo of a bridge."
+          />
+        </div>
+        <div>
+          <img
+            id="instagram-logo"
+            src="/images/brand.png"
+            alt="Instagram logo"
+          />
+          <button>
+            <img src="/images/home.png" alt="Home icon" />
+            Log in
+          </button>
+        </div>
+      </div>
+      <div>
+        <h1>Capture and Share the World's Moments</h1>
+        <p>
+          Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and
+          <strong>fun</strong> way to share your life with friends and family.
+        </p>
+        <p>
+          Take a picture or video, choose a filter to transform its look and
+          feel, then post to Instagram &mdash; it's that easy. You can even
+          share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+          world.
+        </p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <div class="download-app">
+          <img src="images/badge-iphone.png" alt="Download on the App Store" />
+          <img src="images/badge-android.png" alt="Get it on Google Play" />
+        </div>
+      </div>
+    </container>
+    <footer>
+      <div>
+        <ul>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+        </ul>
+      </div>
+      <div><span>&copy; 2014 Instagram</span></div>
+    </footer>
+  </body>
+</html>
+
+<!-- 
+  <!DOCTYPE html>
+  <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Instagram Clone</title>
+    <link rel="stylesheet" href="styles/style.css" />
+  </head>
+  <body>
     <main>
       <section>
         <img
@@ -46,7 +114,9 @@
         <li>Privacy</li>
         <li>Terms</li>
       </ul>
-      <!-- &copy; 2014 Instagram -->
+      &copy; 2014 Instagram
     </footer>
   </body>
 </html>
+
+-->
