not responsive Instagram Clone

--- a/index.html
+++ b/index.html
@@ -1,16 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Instagram Clone</title>
+        <link rel="stylesheet" href="styles/style.css" />
+    </head>
+    <body>
+        <section class="bgtile"></section>
+        <section class="main">
+            <div class="iphone-image">
+                <img src="/images/phones.png" alt="" />
+            </div>
+            <div class="logo-para">
+                <div class="logo">
+                    <div class="brand">
+                        <img src="/images/brand.png" alt="Brand" />
+                    </div>
+                    <div class="login-button">
+                        <div>
+                            <img src="/images/home.png" alt="Login Button" />
+                        </div>
+                        <div><a class="login" href="#">Log In</a></div>
+                    </div>
+                </div>
+                <div class="para-background">
+                    <h3>
+                        Capture and Share <br />
+                        the World's Moments
+                    </h3>
+                    <p>
+                        Instagram is a <b>fast</b>, <b>beautiful</b> and
+                        <b>fun</b> way to share your life <br />
+                        with friends and family. <br /><br />
+                        Take a picture or video, choose a filter to transform
+                        its look <br />
+                        and feel, then post to Instagram &mdash; it's that easy.
+                        You can <br />
+                        even share to Facebook, Twitter, Tumblr and more. It's a
+                        <br />
+                        new way to see the world. <br /><br />
+                        Oh yeah, did we mention it's free? <br />
+                    </p>
+                </div>
+                <div class="badges">
+                    <img src="/images/badge-iphone.png" alt="Iphone Badge" />
+                    <img src="/images/badge-android.png" alt="Android Badge" />
+                </div>
+            </div>
+        </section>
+        <footer>
+            <nav>
+                <div class="footer-nav">
+                    <ul class="footer-ul">
+                        <li>About Us</li>
+                        <li>Support</li>
+                        <li>Blog</li>
+                        <li>Press</li>
+                        <li>API</li>
+                        <li>Jobs</li>
+                        <li>Privacy</li>
+                        <li>Terms</li>
+                    </ul>
+                </div>
+                <div><p>&copy; 2014 Instagram</p></div>
+            </nav>
+        </footer>
+    </body>
 </html>
