Improving page overall look

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
         <img src="images/phones.png" alt='Phones'>
       </div>
       <div>
-      <section>
+      <section class="top-container">
         <img src="images/brand.png" alt="Instagram logo">
         <button>
           <img src="images/home.png" alt="Home icon">
           Log in
         </button>
       </section> 
-      <section>
+      <section class="bottom-container">
         <h2>Capture and Share the World's Moments 
         </h2>      
         <p>Instagram is a fast, beautiful and fun way to share your life with
