--- a/index.html
+++ b/index.html
@@ -4,13 +4,51 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="/styles/style.css">
   </head>
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="body-background"></div>
+
+    <div class="body-foreground">
+      <div class="old-ass-phones foreground-section">
+        <img src="images/phones.png" alt="Two iPhone 3s">
+      </div>
+  ​
+      <section class="main-content foreground-section">
+        <div class="logo-and-login">
+          <div><img src="/images/brand.png" alt="Instagram"></div>
+          <a class="login-button">
+            <div><img src="images/home.png" alt="Home Icon"></div>
+            <span><b>Log in</b></span>
+          </a>
+        </div>
+        
+        <section class="site-description">
+          <h1>Capture and Share <br/> the World's Moments</h1>
+            <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with
+              friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+              &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a <br/> new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+            <div class="download-buttons">
+              <img class="app-store-button" src="images/badge-iphone.png" alt="Download on the App Store">
+              <img class="google-play-button" src="images/badge-android.png" alt="Get it on Google Play">
+            </div>
+        </section>
+      </section>
+    </div>
+    
+    <footer>
+      <a class="footer-item" href="#"><b>About Us</b></a>
+      <a class="footer-item" href="#"><b>Support</b></a>
+      <a class="footer-item" href="#"><b>Blog</b></a>
+      <a class="footer-item" href="#"><b>Press</b></a>
+      <a class="footer-item" href="#"><b>API</b></a>
+      <a class="footer-item" href="#"><b>Jobs</b></a>
+      <a class="footer-item" href="#"><b>Privacy</b></a>
+      <a class="footer-item" href="#"><b>Terms</b></a>
+      <span class="copyright footer-item">&copy; <b>2014 INSTAGRAM</b></span>
+    </footer>
   </body>
 </html>
