--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <section class="main-content foreground-section">
         <div class="logo-and-login">
           <div><img src="/images/brand.png" alt="Instagram"></div>
-          <a class="login-button">
+          <a class="login-button" href="#">
             <div><img src="images/home.png" alt="Home Icon"></div>
             <span><b>Log in</b></span>
           </a>
