Additing media queries

--- a/index.html
+++ b/index.html
@@ -8,19 +8,20 @@
   </head>
   <body>
     <div class="top_header">
-
     </div>
     <main>
-      <div>
-        <img src="images/phones.png" alt='Phones'>
+      <div class="phone">
+        <img class="phones_image" src="images/phones.png" alt='Phones'>
       </div>
       <div>
       <section class="top-container">
-        <img src="images/brand.png" alt="Instagram logo">
-        <button>
-          <img src="images/home.png" alt="Home icon">
-          Log in
-        </button>
+        <img class="instagram_logo" src="images/brand.png" alt="Instagram logo">
+          <button>
+            <a href="#">
+            <img src="images/home.png" alt="Home icon">
+            Log in
+          </a>
+          </button>
       </section> 
       <section class="bottom-container">
         <h2>Capture and Share the World's Moments 
@@ -33,8 +34,8 @@
         <p>Oh yeah, did we mention it's free?
         </p>
       <div>
-        <img src="images/badge-iphone.png" alt="Badge iPhone">
-        <img src="images/badge-android.png" alt="Badge Android">       
+        <a href="#"><img class="download-images" src="images/badge-iphone.png" alt="Badge iPhone"></a>
+        <a href="#"><img class="download-images" src="images/badge-android.png" alt="Badge Android"></a>       
       </div>  
     </section>
     </div>
