Improves responsiveness for smaller screens

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </p>
         <p>Oh yeah, did we mention it's free?
         </p>
-      <div>
+      <div class="download-container">
         <a href="#"><img class="download-images" src="images/badge-iphone.png" alt="Badge iPhone"></a>
         <a href="#"><img class="download-images" src="images/badge-android.png" alt="Badge Android"></a>       
       </div>  
